@@ -1,4 +1,4 @@
 DIST evieext-1.0.2.tar.bz2 37534 RMD160 15b04f79cbae05b39a3333695ea362d709a8042c SHA1 1ab4048ffbfb6b69e88d2f0f2cab7ca60e50cc99 SHA256 0b85113a9770083715927f9c7a7d0ab354c8a508a91cb6e8e11130851494d125
-EBUILD evieext-1.0.2.ebuild 459 RMD160 3f15d2bba97682419ef549a123ebc5542608197d SHA1 230ad2ca8c9a37d0f55a3dc3dd85076f6a6cb99c SHA256 1c4dffdfb94b7587eb6c239e50b78fbc31ff8ef40c07d3587719e6ed0c74a99b
-MISC ChangeLog 3181 RMD160 fccd228676c9d34b9092e22b873abf5ed1c431f8 SHA1 b693c3257b3eee4abd98822d777793da79814e09 SHA256 c4c39d5216ff4f9399b989406ab4e22febb5cc54cf1dae5e3a6f928753a136b7
+EBUILD evieext-1.0.2.ebuild 458 RMD160 39af6fbbda83188aac57142372f2b968a9f2bf23 SHA1 212ed91d8827a835b33bde39a9e01e947d6f8a41 SHA256 ece3f45cc69d246115571be3f289137dc512222916bea14071989e726bdf193c
+MISC ChangeLog 3274 RMD160 d2c11e0e67495a328b7e49a589f40ae606efb94e SHA1 6ab908648e5bba59968feaafe0625a00037e0163 SHA256 df4233444d3d4f3fa322aac23fc12e1ee3542e9416f3b3b38dea537677cd8fff
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
