@@ -1,6 +1,9 @@
 # ChangeLog for x11-proto/evieext
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/evieext/ChangeLog,v 1.28 2007/02/04 18:08:36 joshuabaergen Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/evieext/ChangeLog,v 1.29 2009/05/05 15:06:14 fauli Exp $
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org> evieext-1.0.2.ebuild:
+  fix repoman warnings
 
   04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
   evieext-1.0.2.ebuild:
